--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
       display: flex;
       flex-direction: column;
     }
-    .panel1 { background-image:url(images/boat.jpg); }
-    .panel2 { background-image:url(https://source.unsplash.com/rFKUFzjPYiQ/1500x1500); }
-    .panel3 { background-image:url(https://images.unsplash.com/photo-1465188162913-8fb5709d6d57?ixlib=rb-0.3.5&q=80&fm=jpg&crop=faces&cs=tinysrgb&w=1500&h=1500&fit=crop&s=967e8a713a4e395260793fc8c802901d); }
-    .panel4 { background-image:url(https://source.unsplash.com/ITjiVXcwVng/1500x1500); }
-    .panel5 { background-image:url(https://source.unsplash.com/3MNzGlQM7qs/1500x1500); }
+    .panel1 { background-image:url(images/redcan.jpg); }
+    .panel2 { background-image:url(images/hotair.jpg); }
+    .panel3 { background-image:url(images/boat.jpg); }
+    .panel4 { background-image:url(images/cloud.jpg); }
+    .panel5 { background-image:url(images/snowy.jpg); }
     /* Flex Items */
     .panel > * {
       margin:0;
